[gd_scene load_steps=12 format=2]

[ext_resource path="res://Images/Secondaries/fish.png" type="Texture" id=1]
[ext_resource path="res://Scenes/Secondaries/Tuna/Fish.gd" type="Script" id=2]
[ext_resource path="res://Images/circle.png" type="Texture" id=3]

[sub_resource type="Curve" id=1]
min_value = -360.0
max_value = 360.0
_data = [ Vector2( 0, 146.011 ), 0.0, 0.0, 0, 0, Vector2( 1, -30.7162 ), -416.727, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=2]
curve = SubResource( 1 )

[sub_resource type="Gradient" id=3]
offsets = PoolRealArray( 0.0833333, 0.363095, 0.988095, 1 )
colors = PoolColorArray( 0.702443, 0.702443, 0.702443, 0.662745, 0.827451, 0.827451, 0.827451, 0.65098, 0.907118, 0.907118, 0.907118, 0.535714, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=4]
gradient = SubResource( 3 )

[sub_resource type="Curve" id=5]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), -7.51033, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=6]
curve = SubResource( 5 )

[sub_resource type="ParticlesMaterial" id=7]
flag_disable_z = true
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 150.0
initial_velocity_random = 0.4
orbit_velocity = 0.0
orbit_velocity_random = 0.0
radial_accel = -30.0
angle = 720.0
angle_random = 1.0
angle_curve = SubResource( 2 )
scale = 0.5
scale_random = 0.5
scale_curve = SubResource( 6 )
color_ramp = SubResource( 4 )

[sub_resource type="CircleShape2D" id=8]
radius = 335.418

[node name="Fish" type="RigidBody2D"]
mass = 0.3
gravity_scale = 30.0
contacts_reported = 3
contact_monitor = true
angular_velocity = -10.0
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 1 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( -16.25, -8.75, 41.5, -16.5, 67.5, 7, 40.75, 26.25, -2.75, 7, -59.75, 26.5, -48.5, -0.25, -66.5, -25.5 )

[node name="Particles2D" type="Particles2D" parent="."]
scale = Vector2( 2, 2 )
emitting = false
amount = 200
lifetime = 1.5
process_material = SubResource( 7 )
texture = ExtResource( 3 )

[node name="Affect_Area" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Affect_Area"]
shape = SubResource( 8 )
[connection signal="body_entered" from="." to="." method="_on_Fish_body_entered"]
[connection signal="body_entered" from="Affect_Area" to="." method="_on_Affect_Area_body_entered"]
[connection signal="body_exited" from="Affect_Area" to="." method="_on_Affect_Area_body_exited"]
